--- a/refactor.org
+++ b/refactor.org
@@ -30,7 +30,8 @@
  sed -i 's/edge_info/channel/g' main.c global.h simulator/* protocol/* utils/*
 ** TODO peer->node, Node -> elemento della lista
 ** TODO togliere typedef e lasciare struct x
-* TODO minor
+* TODO other
+** TODO latency non come attributo di channel ma come numero randomico
 ** exit(-1) in tutte le condizioni di errore (per es. in check_policy_forward)
 - fai search di parola chiave "ERROR"
 ** rimuovere withholds R
@@ -39,6 +40,7 @@
 ** ripensare a sigma_amount
 ** ripensare a uncoop_after_HTLC
 ** cancellare funzioni non utilizzate e commentate
+
 * feedback federico
 ** cercare regexp per passare da snake a camel
 ** aspettare suo feedback
