--- a/refactor.org
+++ b/refactor.org
@@ -20,11 +20,11 @@
 ** global.h diventa thread.h
 * TODO connessione nodi
 - usa algoritmo descritto qui https://medium.com/blockstream/letting-a-million-channels-bloom-985bdb28660b
-* cambio nomi variabili
+* TODO cambio nomi variabili
 ** DONE camel case to snake case
-** TODO channelInfo -> channel, channel->edge
+** DONE channelInfo -> channel, channel->edge
 *** DONE tipi
-*** TODO nomi variabili
+*** DONE nomi variabili
 - provare con
  sed -i 's/channel/edge/g' main.c global.h simulator/* protocol/* utils/*
  sed -i 's/edge_info/channel/g' main.c global.h simulator/* protocol/* utils/*
