--- a/refactor.org
+++ b/refactor.org
@@ -28,7 +28,7 @@
 - provare con
  sed -i 's/channel/edge/g' main.c global.h simulator/* protocol/* utils/*
  sed -i 's/edge_info/channel/g' main.c global.h simulator/* protocol/* utils/*
-** TODO peer->node, Node -> elemento della lista
+** DONE peer->node, Node -> elemento della lista
 ** DONE togliere typedef e lasciare struct x
 * TODO other
 ** TODO latency non come attributo di channel ma come numero randomico
