--- a/refactor.org
+++ b/refactor.org
@@ -19,6 +19,7 @@
 ** DONE il file protocol.c diventa htlc.c
 - cosi quando si vuole aggiungere nuovo protocollo si crea file separato new-protoco.c
 ** DONE global.h diventa thread.h
+** TODO spostare tutte le funzioni dei thread in routing.c
 * TODO connessione nodi
 - usa algoritmo descritto qui https://medium.com/blockstream/letting-a-million-channels-bloom-985bdb28660b
 * DONE cambio nomi variabili
