--- a/refactor.org
+++ b/refactor.org
@@ -10,16 +10,18 @@
 - usare i for per calcolare le varie misure
 - vedere se ci sono funzioni di numpy che direttamente calcolano varianza, media etc.
 ** fare script che esegure direttamente cloth e batch-means.py
-* TODO organizzare i file
+* DONE organizzare i file
 ** DONE modifica path dei file della topologia in initialize_topology_preproc
 ** DONE fare due cartelle: src, include
-** DONE fare file cloth.c con main e altri oggetti del similatore (i/o, threads, random generator)
+** DONE fare file cloth.c con main e altri oggetti del similatore (i/o,random generator)
 ** DONE fare file network.c dove ci sono i vari create_channel create_node
 ** DONE fare file payment.c
 ** DONE il file protocol.c diventa htlc.c
 - cosi quando si vuole aggiungere nuovo protocollo si crea file separato new-protoco.c
-** DONE global.h diventa thread.h
-** TODO spostare tutte le funzioni dei thread in routing.c
+** DONE global.h eliminato: i thread vanno in routing.h
+** DONE routing.c
+*** DONE spostare qui thread
+*** DONE elimina dijkstra_p, che diventa dijkstra (i non-thread lo chiamano con indice 0)
 * TODO connessione nodi
 - usa algoritmo descritto qui https://medium.com/blockstream/letting-a-million-channels-bloom-985bdb28660b
 * DONE cambio nomi variabili
